docs: add documentation for create Project
