# handler/projectHandler/response.go
@@ -4,12 +4,13 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/raulval/gofreela/schemas"
 )
 
 func sendError(ctx *gin.Context, code int, msg string) {
 	ctx.Header("Content-Type", "application/json")
 	ctx.JSON(code, gin.H{
-		"message": msg,
+		"message":   msg,
 		"errorCode": code,
 	})
 }
@@ -19,4 +20,13 @@ func sendSuccess(ctx *gin.Context, data interface{}) {
 	ctx.JSON(http.StatusOK, gin.H{
 		"data": data,
 	})
+}
+
+type ErrorResponse struct {
+	Message   string `json:"message"`
+	ErrorCode int    `json:"errorCode"`
+}
+
+type CreateProjectResponse struct {
+	Data schemas.ProjectResponse `json:"data"`
 }
